; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_ste.c_mlx5dr_ste_build_gre.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_ste.c_mlx5dr_ste_build_gre.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5dr_ste_build = type { i32, i32, i32*, i32, i32, i32 }
%struct.mlx5dr_match_param = type { i32 }

@MLX5DR_STE_LU_TYPE_GRE = common dso_local global i32 0, align 4
@dr_ste_build_gre_tag = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx5dr_ste_build_gre(%struct.mlx5dr_ste_build* %0, %struct.mlx5dr_match_param* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.mlx5dr_ste_build*, align 8
  %6 = alloca %struct.mlx5dr_match_param*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mlx5dr_ste_build* %0, %struct.mlx5dr_ste_build** %5, align 8
  store %struct.mlx5dr_match_param* %1, %struct.mlx5dr_match_param** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.mlx5dr_match_param*, %struct.mlx5dr_match_param** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = load %struct.mlx5dr_ste_build*, %struct.mlx5dr_ste_build** %5, align 8
  %12 = getelementptr inbounds %struct.mlx5dr_ste_build, %struct.mlx5dr_ste_build* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @dr_ste_build_gre_bit_mask(%struct.mlx5dr_match_param* %9, i32 %10, i32 %13)
  %15 = load i32, i32* %8, align 4
  %16 = load %struct.mlx5dr_ste_build*, %struct.mlx5dr_ste_build** %5, align 8
  %17 = getelementptr inbounds %struct.mlx5dr_ste_build, %struct.mlx5dr_ste_build* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load %struct.mlx5dr_ste_build*, %struct.mlx5dr_ste_build** %5, align 8
  %20 = getelementptr inbounds %struct.mlx5dr_ste_build, %struct.mlx5dr_ste_build* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* @MLX5DR_STE_LU_TYPE_GRE, align 4
  %22 = load %struct.mlx5dr_ste_build*, %struct.mlx5dr_ste_build** %5, align 8
  %23 = getelementptr inbounds %struct.mlx5dr_ste_build, %struct.mlx5dr_ste_build* %22, i32 0, i32 5
  store i32 %21, i32* %23, align 8
  %24 = load %struct.mlx5dr_ste_build*, %struct.mlx5dr_ste_build** %5, align 8
  %25 = getelementptr inbounds %struct.mlx5dr_ste_build, %struct.mlx5dr_ste_build* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @dr_ste_conv_bit_to_byte_mask(i32 %26)
  %28 = load %struct.mlx5dr_ste_build*, %struct.mlx5dr_ste_build** %5, align 8
  %29 = getelementptr inbounds %struct.mlx5dr_ste_build, %struct.mlx5dr_ste_build* %28, i32 0, i32 4
  store i32 %27, i32* %29, align 4
  %30 = load %struct.mlx5dr_ste_build*, %struct.mlx5dr_ste_build** %5, align 8
  %31 = getelementptr inbounds %struct.mlx5dr_ste_build, %struct.mlx5dr_ste_build* %30, i32 0, i32 2
  store i32* @dr_ste_build_gre_tag, i32** %31, align 8
  ret void
}

declare dso_local i32 @dr_ste_build_gre_bit_mask(%struct.mlx5dr_match_param*, i32, i32) #1

declare dso_local i32 @dr_ste_conv_bit_to_byte_mask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
